# webrtc-loopback

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
example/: index.html  index.ts  lib.ts  package.json
scripts/: install.sh
src/: main.rs  media_type.rs  peer_connection.rs  signal.rs  webrtc.rs
videos/: horse_drawn.264  horse_drawn.mkv
