[package]
name = "webrtc-loopback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "4.0.29", features = ["derive"] }

tokio = { version = "1.15", features = ["full"] }
env_logger = "0.9"
tokio-util = { version="0.6", features = ["codec"] }
anyhow = "1.0"
chrono = "0.4"
log = "0.4.16"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
webrtc = "0.6.0"
actix-cors = "0.6.4"
