[package]
name = "webrtc-loopback"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.15", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
env_logger = "0.10"
anyhow = "1.0"
chrono = "0.4"
log = "0.4.16"
serde = "1.0"
serde_json = "1.0"
webrtc = "0.6"
actix-cors = "0.6"
